syntax = "proto3";

package latest.base;

message SimpleTest {
  int32 int_field = 1;
  string string_field = 2;
}
